--- a/.github/workflows/code_style.yml
+++ b/.github/workflows/code_style.yml
@@ -42,6 +42,7 @@ jobs:
 
         # Runs command-line programs using the operating system's shell
         run: |
+          sudo apt install libgraphviz-dev
           python -m pip install --upgrade pip wheel setuptools
           python -m pip install -r requirements.txt
           python -m pip list
